syntax = "proto3";
option csharp_namespace = "ProductGrpc.Protos";
import "google/protobuf/empty.proto";
package productGrpc;

service ProductStatusGrpcComunicator {
	rpc GetProductStatusesAsync (google.protobuf.Empty) returns(stream ProductStatusResult);
}

message ProductStatusResult {
	uint32 id = 1;
	string name = 2;
}